[v#.#.#] ([month] [YYYY])
  - Kit Import: Use file name sequencing when a template file with the same name exists
  - Upgraded gems:
    - rexml
  - Bugs fixes:
    - [entity]:
      - [future tense verb] [bug fix]
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.13.0 (July 2024)
  - Attachments: Copy attachments when moving an evidence/note
  - Liquid: Make project-level collections available for Liquid syntax
  - Upgraded gems: nokogiri, rails, redcloth, rexml
  - Bugs fixes:
    - Navigation: Restore functionality of native browser back/forward buttons
  - Security Fixes:
    - Medium: Authenticated (author) horizontal privilege escalation affecting attachments

v4.12.0 (May 2024)
  - Attachments: Add size, created_at, and download link to the API
  - Mappings: Map fields from scanner integrations to Dradis fields
  - Upgraded gems:
    - nokogiri, rails
  - Bugs fixes:
    - Projects: Fix redirection when updating an issue or content block
    - Sidebar: Prevent version number from overlapping listed records
  - New integrations:
    - Pentera
  - Security Fixes:
    - High: Authenticated author path traversal

v4.11.0 (January 2024)
  - Assets: Add importmap-rails to handle js libraries
  - Liquid: Add LiquidAssignsService